--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Damien Decelle</title>
+    <title>Damien Decelle | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
